# rosbag2pcd2bin_converter

./: .gitignore  CMakeLists.txt  README.md  convert.cpp  rename.py
pcd_files/: 0.pcd  1.pcd  10.pcd  100.pcd  101.pcd  102.pcd  103.pcd  104.pcd  105.pcd  106.pcd  107.pcd  108.pcd  109.pcd  11.pcd  110.pcd  111.pcd  112.pcd  113.pcd  114.pcd  115.pcd  116.pcd  117.pcd  118.pcd  119.pcd  12.pcd  120.pcd  121.pcd  122.pcd  123.pcd  124.pcd  125.pcd  126.pcd  127.pcd  128.pcd  129.pcd  13.pcd  130.pcd  131.pcd  132.pcd  133.pcd  (+366 more)
